--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       <div class="col-md-6">
         <div class="card mb-3 shadow-sm">
           <div class="card-header fw-bold d-flex justify-content-between align-items-center">
-            Decoded Access Token
+            Access Token
             <i class="fas fa-copy text-primary copy-btn" data-target="access_token"
               style="cursor: pointer; display: none;"></i>
           </div>
@@ -73,7 +73,7 @@
       <div class="col-md-6">
         <div class="card mb-3 shadow-sm">
           <div class="card-header fw-bold d-flex justify-content-between align-items-center">
-            Decoded ID Token
+            ID Token
             <i class="fas fa-copy text-primary copy-btn" data-target="id_token"
               style="cursor: pointer; display: none;"></i>
           </div>
