--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
     </div>
     <div class="row">
       <div class="col-md-6">
+        <!-- Access Token -->
         <div class="card mb-3 shadow-sm">
           <div class="card-header fw-bold d-flex justify-content-between align-items-center">
             Access Token
@@ -69,8 +70,22 @@
             <pre id="access-token" class="jwt-box">No token generated yet.</pre>
           </div>
         </div>
+
+        <!-- Refresh Token -->
+        <div class="card mb-3 shadow-sm" style="display: none;" id="refresh-token-box">
+          <div class="card-header fw-bold d-flex justify-content-between align-items-center">
+            Refresh Token
+            <i class="fas fa-copy text-primary copy-btn" data-target="refresh_token"
+              style="cursor: pointer; display: none;"></i>
+          </div>
+          <div class="card-body">
+            <pre id="refresh-token" class="jwt-box">No token generated yet.</pre>
+          </div>
+        </div>
       </div>
+
       <div class="col-md-6">
+        <!-- ID Token -->
         <div class="card mb-3 shadow-sm">
           <div class="card-header fw-bold d-flex justify-content-between align-items-center">
             ID Token
@@ -84,6 +99,7 @@
       </div>
     </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
